--- a/linkedin_frontend/src/components/signup-form-users/signup-form-users.css
+++ b/linkedin_frontend/src/components/signup-form-users/signup-form-users.css
@@ -15,3 +15,25 @@
     font-weight: lighter;
     font-size: 58px;
 }
+
+
+.signup-form {
+    border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    padding-right: 12%;
+    margin-top: 30px;
+    /* padding-left: 20%;
+    padding-right: 20%;
+    padding-bottom: 3%; */
+}
+
+.signup-form input{
+    height: 60px;
+    border-radius: 10px;
+    border: 1px solid #7A7A7A;
+    color: #7A7A7A;
+    margin-bottom: 18px;
+    padding-left: 5px;
+}  
+
