--- a/linkedin_frontend/src/components/signup-form-users/signup-form-users.css
+++ b/linkedin_frontend/src/components/signup-form-users/signup-form-users.css
@@ -1,16 +1,16 @@
-.signup-form-users{
+.signup-form-users {
     border: 2px solid blue;
     width: 50%;
     margin-top: 50px;
     padding: 15px;
 }
 
-.signup-section{
+.signup-section {
     border: 1px solid purple;
     display: flex;
 }
 
-.signup-title{
+.signup-title {
     color: #8F5849;
     font-weight: lighter;
     font-size: 58px;
@@ -18,22 +18,49 @@
 
 
 .signup-form {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     flex-direction: column;
     padding-right: 12%;
-    margin-top: 30px;
-    /* padding-left: 20%;
-    padding-right: 20%;
-    padding-bottom: 3%; */
+    margin-top: 25px;
 }
 
-.signup-form input{
+.signup-form input {
     height: 60px;
     border-radius: 10px;
     border: 1px solid #7A7A7A;
     color: #7A7A7A;
     margin-bottom: 18px;
     padding-left: 5px;
-}  
+    font-size: 15px;
+}
 
+.submit-signup {
+    width: 100%;
+    height: 60px;
+    border-radius: 50px;
+    background-color: #2977C9;
+    color: white;
+    font-size: 30px;
+    border: none;
+    cursor: pointer;
+}
+
+.nav-to-other-forms {
+    border: 2px solid red;
+    text-align:center;
+    margin-top: 18px;
+}
+
+.blue {
+    color: #2977C9;
+}
+
+.gray{
+    color: #7A7A7A;
+}
+
+.smaller-text{
+    font-size: 15px;
+    margin-bottom:4px;
+}
