Frontend <> Users Signup : finalized styling users signup page

--- a/linkedin_frontend/src/components/logo_nav/logo_nav.css
+++ b/linkedin_frontend/src/components/logo_nav/logo_nav.css
@@ -1,7 +1,7 @@
 .logo-nav-container{
-    border: 2px solid red;
     width: 100vw;
     height: 87px;
+    padding-left:20px;
 }
 
 .logo-nav-container img{
