--- a/linkedin_frontend/src/components/signup-form-users/signup-form-users.css
+++ b/linkedin_frontend/src/components/signup-form-users/signup-form-users.css
@@ -22,7 +22,7 @@
     margin-top: 25px;
 }
 
-.signup-form input {
+.signup-form input, select {
     height: 60px;
     border-radius: 10px;
     border: 1px solid #7A7A7A;
